==> ibexuk/C_Communications_Ethernet_TCP_IP_Driver/NIC Stellaris LM3S6965/eth-nic.c <==
#define NIC_C
#include <string.h>
#include "libtype.h"
#include "eth-main.h"
#include "eth-nic.h"
#define uC_HW_REG(x) (*((volatile unsigned long *)(x)))

void nic_write_phy_register (BYTE ucRegAddr, WORD ulData)
{
  // Wait for any pending transaction to complete
  while(uC_HW_REG(ETH_BASE + ETH_MAC_MCTL) & ETH_MAC_MCTL_START) ;
  {
  }

  // Program the DATA to be written
  uC_HW_REG(ETH_BASE + ETH_MAC_MTXD) = ulData & ETH_MAC_MTXD_MASK ;

  // Program the PHY register address and initiate the transaction
  uC_HW_REG(ETH_BASE + ETH_MAC_MCTL) = (((ucRegAddr << 3) & ETH_MAC_MCTL_REGADR_MASK) | ETH_MAC_MCTL_WRITE | ETH_MAC_MCTL_START);

  // Wait for the write transaction to complete
  while(uC_HW_REG(ETH_BASE + ETH_MAC_MCTL) & ETH_MAC_MCTL_START) ;
  {
  }
}

WORD nic_read_phy_register (BYTE ucRegAddr)
{
  // Wait for any pending transaction to complete
  while(uC_HW_REG(ETH_BASE + ETH_MAC_MCTL) & ETH_MAC_MCTL_START) ;

  // Program the DATA to be written
  uC_HW_REG(ETH_BASE + ETH_MAC_MTXD) = ucRegAddr & ETH_MAC_MTXD_MASK ;

  // Program the PHY register address and initiate the transaction
  uC_HW_REG(ETH_BASE + ETH_MAC_MCTL) = (((ucRegAddr << 3) & ETH_MAC_MCTL_REGADR_MASK) | ETH_MAC_MCTL_START);

  // Wait for the write transaction to complete
  while(uC_HW_REG(ETH_BASE + ETH_MAC_MCTL) & ETH_MAC_MCTL_START) ;

  // Return the PHY data that was read.
  return(uC_HW_REG(ETH_BASE + ETH_MAC_MRXD) & ETH_MAC_MRXD_MASK);
}

void nic_initialise (BYTE init_config)
{
  // disable eth
  nic_disable() ;

  // First cfg clock prescaler
  uC_HW_REG(ETH_BASE + ETH_MAC_MDV) = (ETH_MIIDIV & ETH_MAC_MDV_DIVMASK) ;

  // Set eth MAC address
  EthernetMACAddrSet(&our_mac_address) ;

  // reset ALL pending isr
  uC_HW_REG(ETH_BASE + ETH_MAC_IACK) = (ETH_MAC_IACK_RXINT | ETH_MAC_IACK_TXERR | ETH_MAC_IACK_TXEMPTY |
                                        ETH_MAC_IACK_FOVRN | ETH_MAC_IACK_RXERR | ETH_MAC_IACK_MDINT   |
                                        ETH_MAC_IACK_PHYINT ) ;

  // Setup the Transmit Control Register
  uC_HW_REG(ETH_BASE + ETH_MAC_TCTL) = (ETH_MAC_TCTL_DUPLEX | ETH_MAC_TCTL_CRC | ETH_MAC_TCTL_PADEN ) ;

  // Setup the Receive Control Register.
  uC_HW_REG(ETH_BASE + ETH_MAC_RCTL) &= ~(ETH_MAC_RCTL_BADCRC | ETH_MAC_RCTL_PRMS | ETH_MAC_RCTL_AMUL); ;

   //----- DO FINAL FLAGS SETUP -----
  nic_is_linked = 0;
  nic_speed_is_100mbps = init_config;
  nic_rx_packet_waiting_to_be_dumped = 0;

  // configure led port
  nic_led_config() ;

  // enable eth
  nic_enable() ;
}

WORD nic_check_for_rx (void)
{
  WORD j = 0 ;

  DWORD ulTemp ;

  WORD framelen ;

  if (nic_error_check()) return (0) ;

  nic_link_check() ;

  if(uC_HW_REG(ETH_BASE + ETH_MAC_NP))
  {
    nic_setup_read_data();

    // read first frame dword
    ulTemp = uC_HW_REG(ETH_BASE + ETH_MAC_DATA);
    framelen = (WORD)(ulTemp & 0x00000FFFF);

    // start fill data buffer
    nic_rxpacket[0] = (ulTemp >> 16) & 0x000000FF ;
    nic_rxpacket[1] = (ulTemp >> 24) & 0x000000FF ;

    // safety ctrl only
    if (framelen > NIC_MAX_FRAME_LENGTH) framelen = NIC_MAX_FRAME_LENGTH ;

    // read DWORD
    for (j = 4 ; j < framelen ; j+=4) // j start from second fifo dword of frame
    {
      *(DWORD *)&nic_rxpacket[j-2] = uC_HW_REG(ETH_BASE + ETH_MAC_DATA);
    }

    nic_rx_bytes_remaining = framelen - 2 - 4; // 2LEN+4FCS

    nic_rx_packet_total_ethernet_bytes = nic_rx_bytes_remaining;

    return nic_rx_bytes_remaining;
  }

  return 0 ;
}

void nic_setup_read_data (void)
{
  memset (nic_rxpacket, 0, sizeof (nic_rxpacket)) ;
  nic_rxpacket_ndx =0  ;
}

BYTE nic_read_next_byte (BYTE *data)
{
  *data = 0 ;

  if(nic_rx_bytes_remaining)
  {
   *data = nic_rxpacket[nic_rxpacket_ndx++] ;

    nic_rx_bytes_remaining--;

    return (1) ;
  }

  return 0 ;
}

void nic_move_pointer (WORD move_pointer_to_ethernet_byte)
{
  if (move_pointer_to_ethernet_byte < NIC_MAX_FRAME_LENGTH)
  {
    nic_rxpacket_ndx = move_pointer_to_ethernet_byte ;
    nic_rx_bytes_remaining = nic_rx_packet_total_ethernet_bytes - move_pointer_to_ethernet_byte ;
  }
}

BYTE nic_setup_tx (void)
{
  // previous TX active ?
  if(uC_HW_REG(ETH_BASE + ETH_MAC_TR) & ETH_MAC_TR_NEWTX ) return(0);

  memset (nic_txpacket, 0, sizeof (nic_txpacket)) ;
  nic_tx_len = 0;

  return(1);
}

void nic_write_next_byte (BYTE data)
{
  //----- UPDATE THE TX LEN COUNT AND EXIT IF TOO MANY BYTES HAVE BEEN WRITTEN FOR THE NIC -----
  if(nic_tx_len >= (NIC_MAX_FRAME_LENGTH - 6))
    return;

  nic_txpacket[nic_tx_len++] = data;
}

void nic_write_tx_word_at_location (WORD byte_address, WORD data)
{
  if (byte_address < NIC_MAX_FRAME_LENGTH-1)
  {
    nic_txpacket[byte_address++] = data & 0x00FF ;
    nic_txpacket[byte_address  ] = data >> 8 ;
  }
}

void nix_tx_packet (void)
{
  DWORD_VAL temp ;

  WORD  j = 0;

  // write first word
  temp.val  = (DWORD)(nic_tx_len -  14); // len without header
  temp.v[2] = nic_txpacket[j++] ;
  temp.v[3] = nic_txpacket[j++] ;
  uC_HW_REG(ETH_BASE + ETH_MAC_DATA)= temp.val;

  // write word1 to wordN-1
  for (j=2; j <= (nic_tx_len - 4) ; j += 4)
  {
      uC_HW_REG(ETH_BASE + ETH_MAC_DATA) = *((DWORD *)&nic_txpacket[j]) ;
  }

  // write last wordN
  if(j != nic_tx_len)
  {
    temp.val = 0 ;

    if(j == (nic_tx_len - 1))
    {
      temp.v[0] = nic_txpacket[j++] ;
    }
    else if(j == (nic_tx_len - 2))
    {
      temp.v[0] = nic_txpacket[j++] ;
      temp.v[1] = nic_txpacket[j++] ;
    }
    else if(j == (nic_tx_len - 3))
    {
      temp.v[0] = nic_txpacket[j++] ;
      temp.v[1] = nic_txpacket[j++] ;
      temp.v[2] = nic_txpacket[j++] ;
    }

    uC_HW_REG(ETH_BASE + ETH_MAC_DATA) = temp.val;
  }

  // OK to tx
  uC_HW_REG(ETH_BASE + ETH_MAC_TR) = ETH_MAC_TR_NEWTX;
}
